--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 
         <!-- Add your site or application content here -->
         <h2>Tic-Tac-Toe</h2>
-        <button type="button" name="play" class="button btn-md btn-primary">New Game</button>
+        <div id="btn-container">
+          <button type="button" name="play" class="button btn-md btn-primary">New Game</button>
+          <button type="button" name="login" class="btn btn-default" id="login">Login to Play</button>
+        </div>
         <h3>
           First player is x.
         </h3>
@@ -67,6 +70,7 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
