--- a/index.html
+++ b/index.html
@@ -36,27 +36,36 @@
         </h3>
         <div class="wrapper row">
           <div class="row">
-            <div class="col-xs-4 col-xs-offset-2 cell">
+            <div class="col-xs-4 col-xs-offset-2 cell" id="4">
+              4
             </div>
-            <div class="col-xs-4 cell">
+            <div class="col-xs-4 cell" id="9">
+              9
             </div>
-            <div class="col-xs-4 cell">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-4 col-xs-4 col-xs-offset-2 cell">
-            </div>
-            <div class="col-xs-4 cell">
-            </div>
-            <div class="col-xs-4 cell">
+            <div class="col-xs-4 cell" id="2">
+              2
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-4 col-xs-4 col-xs-offset-2 cell">
+            <div class="col-xs-4 col-xs-4 col-xs-offset-2 cell" id="3">
+              3
             </div>
-            <div class="col-xs-4 cell">
+            <div class="col-xs-4 cell" id="5">
+              5
             </div>
-            <div class="col-xs-4 cell">
+            <div class="col-xs-4 cell" id="7">
+              7
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-4 col-xs-4 col-xs-offset-2 cell" id="8">
+              8
+            </div>
+            <div class="col-xs-4 cell" id="1">
+              1
+            </div>
+            <div class="col-xs-4 cell" id="6">
+              6
             </div>
           </div>
         </div>
